syntax = "proto3";

package infrastructure.api.rpc.payment.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/billing/infrastructure/payment_rpc";

import "google/protobuf/empty.proto";
import "domain/billing/payment/v1/payment.proto";

service PaymentService {
  rpc Payment(PaymentRequest) returns(PaymentResponse) {}
  rpc Payments(google.protobuf.Empty) returns(PaymentsResponse) {}
  rpc PaymentCreate(PaymentCreateRequest) returns(PaymentCreateResponse) {}
  rpc PaymentClose(PaymentCloseRequest) returns(PaymentCloseResponse) {}
}

message PaymentRequest {
  domain.billing.payment.v1.Payment payment = 1;
}

message PaymentResponse {
  domain.billing.payment.v1.Payment payment = 1;
}

message PaymentsResponse {
  repeated domain.billing.payment.v1.Payment list = 1;
}

message PaymentCreateRequest {
  domain.billing.payment.v1.Payment payment = 1;
}

message PaymentCreateResponse {
  domain.billing.payment.v1.Payment payment = 1;
}

message PaymentCloseRequest {
  domain.billing.payment.v1.Payment payment = 1;
}

message PaymentCloseResponse {
  domain.billing.payment.v1.Payment payment = 1;
}
