syntax = "proto3";

package infrastructure.api.rpc.tariff.v1;

option go_package = "github.com/batazor/shortlink/internal/billing/infrastructure/tariff_rpc";

import "google/protobuf/empty.proto";
import "domain/billing/tariff/v1/tariff.proto";

service TariffService {
  rpc Tariff(TariffRequest) returns(TariffResponse) {}
  rpc Tariffs(google.protobuf.Empty) returns(TariffsResponse) {}
  rpc TariffCreate(TariffCreateRequest) returns(TariffCreateResponse) {}
  rpc TariffUpdate(TariffUpdateRequest) returns(TariffUpdateResponse) {}
  rpc TariffClose(TariffCloseRequest) returns(TariffCloseResponse) {}
}

message TariffRequest {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffResponse {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffsResponse {
  repeated domain.billing.tariff.v1.Tariff list = 1;
}

message TariffCreateRequest {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffCreateResponse {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffUpdateRequest {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffUpdateResponse {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffCloseRequest {
  domain.billing.tariff.v1.Tariff tariff = 1;
}

message TariffCloseResponse {
  domain.billing.tariff.v1.Tariff tariff = 1;
}
